--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,19 @@ body {
 .no-scroll {
   overflow: hidden;
 }
+
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 10px; 
+}
+
+::-webkit-scrollbar-track {
+  background: #242323; 
+  border-radius: 10px; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: #9810fa; 
+  border-radius: 10px; 
+}
