--- a/src/app/features/snippets/components/box-snippet/box-snippet.html
+++ b/src/app/features/snippets/components/box-snippet/box-snippet.html
@@ -6,7 +6,7 @@
     <div class="flex items-center gap-3">
       <img
         src="./{{ detectIcon(snippet.icon) }}"
-        class="w-12 h-12 drop-shadow-xl/90"
+        class="w-10 h-10 lg:w-12 lg:h-12 drop-shadow-xl/90"
         [ngClass]="{
           'drop-shadow-red-600': snippet.framework === 'Angular',
           'drop-shadow-blue-600': snippet.framework === 'React',
@@ -15,7 +15,7 @@
         }"
         alt="snippet.framework"
       />
-      <span class="text-xl font-semibold text-white">
+      <span class="text-lg lg:text-xl font-semibold text-white">
         {{ snippet.framework }}
       </span>
     </div>
@@ -43,13 +43,13 @@
     </button>
   </header>
   <div>
-    <p class="text-xl font-semibold  text-gray-100">{{ snippet.title }}</p>
+    <p class=" text-md md:text-lg lg:text-xl font-semibold  text-gray-100">{{ snippet.title }}</p>
   </div>
 
   <!-- code -->
   <div class="p-3 relative bg-white rounded-lg overflow-x-auto">
     @if (snippet.code && snippet.code.length > 0) {
-    <pre><code class="text-purple-600 font-mono" [innerHTML]="snippet.code[0] | highlight"></code></pre>
+    <pre><code class="text-purple-600 font-mono lg:text-sm" [innerHTML]="snippet.code[0] | highlight"></code></pre>
     } @else {
     <pre><code class="bg-gray-100 text-black">No hay código disponible</code></pre>
     }
